--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -3,7 +3,7 @@
  }
  
  .imagem{
-     background-image: url(https://i.imgur.com/d5bMdDJ.jpg);
+     background-image: url(https://github.com/joaocarloslima/portifolio/blob/master/imagens/bg.jpg?raw=trueS);
      background-repeat: no-repeat;
      width: 100vh;
      min-height: 100vh;
