--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,5 +1,6 @@
 .caixa{
-    background-color: rgba(0, 0, 0, 0.932);
+    background: rgb(199, 68, 216);
+    background: radial-gradient(circle, rgb(119, 76, 219) 0%, rgb(76, 51, 134) 4%, rgb(33, 40, 104) 100%);
 }
 
 .titulo{
