--- a/src/paginas/cadastroUsuario/CadastroUsuario.css
+++ b/src/paginas/cadastroUsuario/CadastroUsuario.css
@@ -1,10 +1,10 @@
-.imagem2{
-    background-image: url(https://i.imgur.com/d5bMdDJ.jpg);
+.imag{
+    background-image: url(https://wallpaperaccess.com/full/5254030.jpg);
     background-repeat: no-repeat;
-    width: 100vh;
-    min-height: 100vh;
-    background-size: cover;
-    background-position: center;
+     width: 3000vh;
+     min-height: 100vh;
+     background-size: cover;
+     background-position: center;
 }
 
 .textos2{
@@ -13,4 +13,11 @@
 
 .btnCancelar{
     margin-right: 20px !important;
+}
+
+
+.caixacadastrar {
+    background-color: white;
+    border-radius: 25px;
+    background: linear-gradient(36deg, #857b7b90 8%, #6b6a6a90 80%)!important;
 }
